--- a/s0/s0.vcxproj.filters
+++ b/s0/s0.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="svard.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="dbg.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
