--- a/ConfigMgr/ConfigMgr.vcxproj
+++ b/ConfigMgr/ConfigMgr.vcxproj
@@ -155,6 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConfigMgr.cpp" />
+    <ClCompile Include="ParamDecoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConfigMgr.h" />
