--- a/ConfigMgr/ConfigMgr.vcxproj.filters
+++ b/ConfigMgr/ConfigMgr.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="ConfigMgr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ParamDecoder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConfigMgr.h">
